--- a/kod-css/nyheter.css
+++ b/kod-css/nyheter.css
@@ -25,8 +25,7 @@ body {
 
 /*BILDERNA I ARTIKLARNA*/
 .wrapper img {
-  width: 100%;
-  max-width: 400px;
+  width: 400px;
   height: 300px;
   border-radius: 4px;
 }
@@ -37,15 +36,21 @@ body {
   width: 100%;
 }
 
-/*ARTIKLARNAS POSITION*/
-
-
 /*NYHETS BOXARNA*/
 .news article {
-  margin: 20px 10px 30px 10px;
+  margin: 20px 0px 30px 0px;
   overflow:auto;
   width: 100%;
   border-bottom: 1px solid rgb(14, 176, 16);
+}
+
+.news p {
+  padding: 1rem;
+  font-size: large;
+}
+
+.news h3 {
+  padding: 1rem;
 }
 
 /*BILDERNA HÅLLS TILL HÖGER*/
@@ -58,7 +63,7 @@ figure {
   background-color: rgba(9, 20, 46, 0.7);
   width: 20%;
   color: white;
-  margin: 4em;
+  margin: 2em;
   padding: 2em;
 }
 
@@ -105,7 +110,7 @@ aside a:hover {
 }
 
 .signup-news input[type="email"] {
-  width: 100%;
+  width: 90%;
   padding: 10px;
   margin-bottom: 15px;
   border: 1px solid #ccc;
@@ -145,6 +150,10 @@ aside a:hover {
     width: 100%;
     margin: 0;
     padding: 0;
+  }
+
+  .news p {
+    padding: 0 1rem;
   }
 
   figure {
