--- a/kod-css/medlem.css
+++ b/kod-css/medlem.css
@@ -7,6 +7,7 @@ body, html {
 
 /*Adinas kod*/
 
+
 .top-nav {
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 0.1em;
@@ -36,8 +37,25 @@ body, html {
     position: relative;
 }
 
-.menu > li:hover > a::after {
-    display: inline;
+.menu li a::after {
+    content: none; 
+}
+
+
+.menu li:has(ul) > a::after {
+    content: ""; 
+    border: solid transparent;
+    border-width: 5px 5px 0 5px;
+    border-top-color: white;
+    position: absolute;
+    top: 50%;
+    right: -15px;
+    transform: translateY(-50%);
+    display: none;
+}
+
+.menu li:hover:has(ul) > a::after {
+    display: inline; 
 }
 
 /* Gemensam stil för alla dropdown-menyer */
@@ -59,7 +77,7 @@ body, html {
 .dropdown-spela li,
 .dropdown li,
 .dropdown-medlem li {
-    margin-bottom: 5px; /* Avstånd mellan länkar */
+    margin-bottom: 5px; 
     margin-top: 5px;
     text-align: left;
 }
@@ -158,29 +176,6 @@ body, html {
     text-decoration: none;
 }
 
-.dropdown {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: rgba(9, 20, 46, 0.7);
-    list-style-type: none;
-    padding: 10px 0 0;
-    margin: 0;
-    width: 200px;
-}
-
-.dropdown li {
-    margin-bottom: 30px;
-    margin-top: 20px;
-}
-
-.dropdown li a {
-    padding: 10px;
-    text-align: left;
-    color: white;
-    text-decoration: none;
-}
 
 .dropdown li a:hover {
     background-color: rgba(9, 20, 46, 0.7);
@@ -220,10 +215,94 @@ body, html {
     display: block;
 }
 
-/* Spela dropdown */
+/*Spela dropdown*/
+.dropdown-spela {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: rgba(9, 20, 46, 0.7);
+    list-style-type: none;
+    padding: 10px 0;
+    margin: 0;
+    width: 200px;
+}
+
+.dropdown-spela li {
+    margin-bottom: 30px;
+    margin-top: 20px;
+}
+
+.dropdown-spela li a {
+    padding: 10px;
+    text-align: left;
+    color: white;
+    text-decoration: none;
+}
+
+.dropdown-spela li a:hover {
+    background-color: rgba(9, 20, 46, 0.7);
+}
+
+
 .menu li:hover .dropdown-spela {
     display: block;
 }
+
+/*Hamburgermeny*/
+
+.hamburger-menu {
+    display: none;
+    position: relative;
+    z-index: 1001; 
+}
+.menu-toggle {
+    display: none;
+}
+
+.hamburger-icon {
+    font-size: 30px;
+    cursor: pointer;
+    padding: 10px;
+    color: white;
+    background-color: rgba(9, 20, 46, 0.7);
+    border: none;
+    display: block;
+}
+
+/* Dropdown-listan för hamburgermenyn */
+.hamburger-dropdown {
+    display: none;
+    background-color: rgba(9, 20, 46, 0.9);
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    width: 100%;
+}
+
+.hamburger-dropdown li {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    width: 100%;
+}
+
+.hamburger-dropdown li a {
+    display: block;
+    padding: 10px 20px;
+    color: white;
+    text-decoration: none;
+    text-align: left;
+    width: 100%;
+    box-sizing: border-box;
+    text-align: left;
+}
+
+.hamburger-dropdown li a:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
 
 /*Här slutar Adinas kod*/
 
