--- a/kod-css/medlem.css
+++ b/kod-css/medlem.css
@@ -3,9 +3,10 @@ body, html {
     padding: 0;
     height: 100%;
     font-family: 'Josefin Sans', sans-serif;
-}
 
+}
 /*Adinas kod*/
+
 
 .top-nav {
     font-family: Arial, Helvetica, sans-serif;
@@ -36,8 +37,25 @@ body, html {
     position: relative;
 }
 
-.menu > li:hover > a::after {
-    display: inline;
+.menu li a::after {
+    content: none; 
+}
+
+
+.menu li:has(ul) > a::after {
+    content: ""; 
+    border: solid transparent;
+    border-width: 5px 5px 0 5px;
+    border-top-color: white;
+    position: absolute;
+    top: 50%;
+    right: -15px;
+    transform: translateY(-50%);
+    display: none;
+}
+
+.menu li:hover:has(ul) > a::after {
+    display: inline; 
 }
 
 /* Gemensam stil för alla dropdown-menyer */
@@ -59,7 +77,7 @@ body, html {
 .dropdown-spela li,
 .dropdown li,
 .dropdown-medlem li {
-    margin-bottom: 5px; /* Avstånd mellan länkar */
+    margin-bottom: 5px; 
     margin-top: 5px;
     text-align: left;
 }
@@ -158,29 +176,6 @@ body, html {
     text-decoration: none;
 }
 
-.dropdown {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: rgba(9, 20, 46, 0.7);
-    list-style-type: none;
-    padding: 10px 0 0;
-    margin: 0;
-    width: 200px;
-}
-
-.dropdown li {
-    margin-bottom: 30px;
-    margin-top: 20px;
-}
-
-.dropdown li a {
-    padding: 10px;
-    text-align: left;
-    color: white;
-    text-decoration: none;
-}
 
 .dropdown li a:hover {
     background-color: rgba(9, 20, 46, 0.7);
@@ -220,12 +215,99 @@ body, html {
     display: block;
 }
 
-/* Spela dropdown */
+/*Spela dropdown*/
+.dropdown-spela {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: rgba(9, 20, 46, 0.7);
+    list-style-type: none;
+    padding: 10px 0;
+    margin: 0;
+    width: 200px;
+}
+
+.dropdown-spela li {
+    margin-bottom: 30px;
+    margin-top: 20px;
+}
+
+.dropdown-spela li a {
+    padding: 10px;
+    text-align: left;
+    color: white;
+    text-decoration: none;
+}
+
+.dropdown-spela li a:hover {
+    background-color: rgba(9, 20, 46, 0.7);
+}
+
+
 .menu li:hover .dropdown-spela {
     display: block;
 }
 
+/*Hamburgermeny*/
+
+.hamburger-menu {
+    display: none;
+    position: relative;
+    z-index: 1001; 
+}
+.menu-toggle {
+    display: none;
+}
+
+.hamburger-icon {
+    font-size: 30px;
+    cursor: pointer;
+    padding: 10px;
+    color: white;
+    background-color: rgba(9, 20, 46, 0.7);
+    border: none;
+    display: block;
+}
+
+/* Dropdown-listan för hamburgermenyn */
+.hamburger-dropdown {
+    display: none;
+    background-color: rgba(9, 20, 46, 0.9);
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    width: 100%;
+}
+
+.hamburger-dropdown li {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    width: 100%;
+}
+
+.hamburger-dropdown li a {
+    display: block;
+    padding: 10px 20px;
+    color: white;
+    text-decoration: none;
+    text-align: left;
+    width: 100%;
+    box-sizing: border-box;
+    text-align: left;
+}
+
+.hamburger-dropdown li a:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+
 /*Här slutar Adinas kod*/
+
+
+
 
 
 .background-div-medlem, .register-background {
@@ -469,6 +551,143 @@ hr.line {
         line-height: 1.6;  
     }
 }
+/*ADINA - Visa hamburgermenyn och dölj den horisontella menyn i mobilvy */
+@media (max-width: 768px) {
+    .hamburger-menu {
+        display: block;
+    }
+
+    .top-nav .menu {
+        display: none;
+    }
+
+    .hamburger-icon {
+        font-size: 30px;
+        cursor: pointer;
+        padding: 10px;
+        color: white;
+        background-color: transparent; 
+        border: none;
+        display: block;
+        transition: background-color 0.3s ease; 
+    }
+
+    .hamburger-dropdown {
+        width: 50vw; 
+    }
+
+    .hamburger-dropdown li {
+        position: relative;
+    }
+
+    .hamburger-dropdown li a {
+        width: 100%;
+    }
+
+
+      /*Submeny*/
+
+      .hamburger-dropdown .dropdown-spela {
+        width: 250px; 
+    }
+
+    .hamburger-dropdown .dropdown li,
+    .dropdown-spela li,
+    .dropdown-medlem li {
+        margin: 0;
+        padding: 0;
+    }
+
+    .dropdown-spela li a,
+    .dropdown li a,
+    .dropdown-medlem li a {
+        padding: 10px 15px; 
+        color: white;
+        background-color: rgba(9, 20, 46, 0.9);
+        text-decoration: none;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    .dropdown-spela li a:hover,
+    .dropdown li a:hover,
+    .dropdown-medlem li a:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+
+
+    .hamburger-dropdown .dropdown,
+    .dropdown-spela,
+    .dropdown-medlem {
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 100%; 
+        background-color: rgba(9, 20, 46, 0.9); 
+        padding: 0; 
+        border: none;
+        list-style: none;
+        width: 200px; 
+    }
+
+   
+    .hamburger-dropdown li:hover > .dropdown,
+    .hamburger-dropdown li:hover > .dropdown-spela,
+    .hamburger-dropdown li:hover > .dropdown-medlem {
+        display: block;
+    }
+
+    
+    .hamburger-dropdown li a,
+    .hamburger-dropdown .dropdown li a,
+    .dropdown-spela li a,
+    .dropdown-medlem li a {
+        display: block;
+        padding: 10px 15px;
+        color: white;
+        background-color: rgba(9, 20, 46, 0.9); 
+        text-decoration: none;
+        transition: background-color 0.3s ease;
+        text-align: left;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+
+    .hamburger-dropdown li a:hover,
+    .hamburger-dropdown .dropdown li a:hover,
+    .dropdown-spela li a:hover,
+    .dropdown-medlem li a:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+
+
+.menu-toggle:checked + .hamburger-icon {
+    background-color: rgba(9, 20, 46, 0.7);
+}
+.menu-toggle:checked + .hamburger-icon + .hamburger-dropdown {
+    display: block;
+}
+
+}
+
+    @media only screen and (min-width: 769px) and (max-width: 1300px) {
+        .top-nav {
+            padding: 0.5em;
+        }
+    
+        .menu li {
+            margin: 0 0.5em; 
+        }
+    
+        .menu li a {
+            font-size: 0.85em; 
+            padding: 8px 12px; 
+        }
+    
+        .top-nav .menu {
+            flex-wrap: wrap; 
+        }
+    }
 
 
 
